introduce arrow functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="container">
 <h1>Stopwatch</h1>
 <h2>Vanilla JavaScript Stopwatch</h2>
 <p><span id="seconds">00</span>:<span id="tens">00</span></p>
